# BLOCK-BLAST-DS

./: .gitignore  BUILD.md  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.pc  README.md  cmake_install.cmake  devkitarm-toolchain.cmake
build_ds/: CMakeCache.txt  Makefile  cmake_install.cmake
src/core/: game.c  game.h  main.c  piece.c
src/input/: input.c  input.h
src/platform/: platform.h  platform_ds.c  platform_sdl2.c
src/platform/nds/: input_nds.c  main.c  render_nds.c
src/platform/pc/: input_pc.c  main_pc.c  pc_internal.h  render_pc.c
src/rendering/: render.c  render.h  render_ds.c
